--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -1,3 +1,8 @@
 <h1><%= @episode.title %></h1>
 <p><%= @episode.description %></p>
-<%= @episode.content.html_safe %>
+<%= sanitize @episode.content %>
+
+<video width="320" height="240" controls>
+  <source src="<%= @episode.video %>" type="video/mp4">
+</video>
+
