coming soon homepage

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,49 @@
 // Specific CSS for your home-page
+* {margin:0}
+body {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  height:100vh;
+  background-color:#d5d3d1;
+  font-family:'Raleway', sans-serif;
+  overflow:hidden;
+}
+p {
+  font-size:80px;
+  color:#9E9E9D;
+  opacity: 0;
+  animation:fadein 1.75s cubic-bezier(0.165, 0.84, 0.44, 1) .25s 1;
+  animation-fill-mode: forwards;
+  font-weight:700;
+  padding:0 0 .5em 0;
+  position:relative;
+}
+p:after {
+  content:'';
+  width:30%;
+  left:0;
+  bottom:0;
+  height:.125em;
+  background-color:#9E9E9D;
+  position:absolute;
+  opacity:0;
+  animation:fadein 1.75s cubic-bezier(0.165, 0.84, 0.44, 1) 1s 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadein {
+  0%   {opacity:0;transform:translate(0,30px)}
+  100% {opacity:1;transform:translate(0,0)}
+}
+div {
+  position:absolute;
+  font-size:20px;
+  padding:1em;
+  bottom:0;
+  right:0;
+  color:#9E9E9D;
+  opacity:0;
+  animation:fadein 1.75s cubic-bezier(0.165, 0.84, 0.44, 1) 2s 1;
+  animation-fill-mode: forwards;
+}
