--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,63 @@
 
-  <div class="caixa">
-    <p>
-      So·ro·ri·da·de is a Portuguese word that means union and alliance between women based on empathy and sisterhood.
-      At Sororidade, we believe that role models can have a major impact on shaping our career choices. Which is why we decided to dedicate our project to interviewing and sharing the stories of women working in the tech industry.
+ <div class="wrapper manifest">
+ <!--  <h1>MANIFEST</h1> -->
+  <p>
+    <b><span>So·ro·ri·da·de</b></span> is a Portuguese word that means union and alliance between women based on empathy and sisterhood.
+    <br>
+    <br>
+    At Sororidade, we believe that role models can have a major impact on shaping our career choices. Which is why we decided to dedicate our project to interviewing and sharing the stories of women working in the tech industry.
+    <br>
+    <br>
+    It is our mission to raise awareness of the issues faced by women in tech, recognize the ones already making an impact, and inspire others to join.
+    <br>
+    <br>
+    Inspiration comes in many ways. For us, we find it in people, sometimes it is a friend we grew up with, others the founder of a startup we read about in an article. Their stories have inspired and empowered us to create our own path in the tech world. We believe that the stories we will share can help other women do the same.
+    <br>
+    <br>
+    We’re excited to invite you to listen, participate and help build a stronger community.
+  </p>
 
-      It is our mission to raise awareness of the issues faced by women in tech, recognize the ones already making an impact, and inspire others to join.
+</div>
 
-      Inspiration comes in many ways. For us, we find it in people, sometimes it is a friend we grew up with, others the founder of a startup we read about in an article. Their stories have inspired and empowered us to create our own path in the tech world. We believe that the stories we will share can help other women do the same.
+<div class="wrapper about-us">
+  <h2>About Us</h2>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="profile">
+        <%= image_tag("luana.jpg", alt: "Luana Almeida", :class => "photo-1") %>
+        <p>
+          Hello, I’m Luana <br>
+          <br>
 
-      We’re excited to invite you to listen, participate and help build a stronger community.
-    </p>
+          Man-of-war gibbet hornswaggle list yo-ho-ho six pounders spanker bilge water to go on account maroon.
+          Doubloon swab Arr Pieces of Eight topsail mutiny jib Sink me loot reef.
+          Jack Ketch main sheet wherry six pounders Lett.
+          <br>
+          <br>
+          Get in touch
+        </p>
+      </div>
 
+    </div>
+
+    <div class="col-sm-6">
+      <div class="profile">
+        <%= image_tag("luana.jpg", alt: "Luana Almeida", :class => "photo-1") %>
+        <p>
+          Sharon started her journey in the tech world a few years back as a system administrator,
+          until deciding to take a break and complete a degree in Media and Communication.
+          Her passion for cultures and languages brought her to Portugal at the end of 2018
+          In a couple of words: cat lover and sunset chaser.
+          <br>
+          <br>
+          Get in touch
+
+        </div>
+      </div>
+
+    </div>
   </div>
+
+
+
 
