--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,8 @@
-<div class="banner">
-
-  <h1>NETWORKING</h1>
-  <h2>Presenting by </h2>
-  <h2> Inês Gaspar and Zoe Goldschimidt</h2>
-
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= asset_path 'banner.jpg'%>);">
+  <div class="container">
+    <h1>Imposter Syndrome</h1>
+    <h2>Participants:</h2>
+    <h2> Inês Gaspar and Zoe Goldschimidt</h2>
+  </div>
 </div>
+
