--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,1 +1,32 @@
-_navbar.html.erb
+<nav class="navbar navbar-expand-md py-2 fixed-top">
+
+  <div class="container">
+
+    <a class="navbar-brand" href="#">Sororidade <br><span> Inspire to Empower</span></a>
+
+    <button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#bs-navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- <span class="navbar-toggler-icon custom-toggler"></span> -->
+      <span class="fas fa-bars"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="bs-navbar-collapse">
+      <ul class="navbar-nav  mx-auto justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link">Episodes</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link">About Us</a>
+        </li>
+      </ul>
+      <ul class="navbar-social">
+        <li><a href="#" class="fab fa-instagram"></a></li>
+        <li><a href="#" class="fab fa-youtube"></a></li>
+        <li><a href="#" class="fab fa-linkedin"></a></li>
+      </ul>
+    </div>
+
+  </div>
+
+</nav>
+
