--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,24 +1,43 @@
 
 .banner {
-  background: url(banner.jpg);
+  // background: url(banner.jpg);
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 600px;
+  height: 620px;
   display:flex;
   flex-direction:column;
   justify-content:center;
 
-
   h1 {
     font-size:50px;
     color: white;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
   }
 
   h2 {
-    font-size: 28px;
+    font-size: 24px;
     color: white;
   }
+}
 
+.navbar-brand img {
+  width: 150px;
+}
+
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media (max-width: 768px) {
+  .banner {
+    height:350px;
+    h1 {
+      font-size: 32px;
+    }
+    h2 {
+      font-size: 16px;
+    }
+  }
 
 }
