--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,8 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap');
 
 // Define fonts for body and headers
-$body-font: 'Montserrat', sans-serif;
-$headers-font: 'Montserrat', sans-serif;
+// $body-font: 'Montserrat', sans-serif;
+// $headers-font: 'Montserrat', sans-serif;
+$body-font: 'PT Sans', sans-serif;
+$headers-font: 'PT Sans', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
