--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
 <div class="footer">
   <div class="wrapper">
     <div class="row">
-     <div class="col-sm-6">
+     <div class="col-sm-12 col-md-8">
       <div class="footer-follow">
         <p>Follow us and be notified about the next live.</p>
 
@@ -14,12 +14,12 @@
       </div>
     </div>
 
-    <div class="col-sm-6">
+    <div class="col-sm-12 col-md-4">
       <div class="footer-copyright">
         <p>Copyright 2020 - Sororidade. All rights Reserved.</p>
       </div>
     </div>
-  </div>
+</div>
 </div>
 </div>
 
