--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,58 +1,64 @@
 
-<div class="wrapper manifest">
-  <span>So·ro·ri·da·de</span> is a Portuguese word that means union and alliance between women based on empathy and sisterhood.
-  <br>
-  <br>
-  At Sororidade, we believe that role models can have a major impact on shaping our career choices. Which is why we decided to dedicate our project to interviewing and sharing the stories of women working in the tech industry.
-  <br>
-  <br>
-  It is our mission to raise awareness of the issues faced by women in tech, recognize the ones already making an impact, and inspire others to join.
-  <br>
-  <br>
-  Inspiration comes in many ways. For us, we find it in people, sometimes it is a friend we grew up with, others the founder of a startup we read about in an article. Their stories have inspired and empowered us to create our own path in the tech world. We believe that the stories we will share can help other women do the same.
-  <br>
-  <br>
-  We are excited to invite you to listen, participate and help build a stronger community.
-
-</div>
-
-<div class="wrapper about-us">
-  <h2>About Us</h2>
-  <div class="row">
-    <div class="col-sm-5">
-      <div class="profile">
-        <%= image_tag("luana.jpg", alt: "Luana Almeida", :class => "photo-1") %>
-        <p>
-          Luana initiated her career with a degree in Tourism and she has
-          many years with sales experience. In IT she started as Technical
-          Customer Support and a passion bring her to Portugal 5 years ago.
-          Now, she is challenging herself working as an OutSystems Developer.
-          In a couple of words: soccer fan and travel lover.
-          <br>
-          <br>
-          <a href="https://www.linkedin.com/in/luana-almeida/">Get in touch</a>
-        </p>
-      </div>
-
-    </div>
-
-    <div class="col-sm-5 offset-sm-2">
-      <div class="profile">
-        <%= image_tag("luana.jpg", alt: "Luana Almeida", :class => "photo-1") %>
-        <p>
-          Sharon started her journey in the tech world a few years back as a system administrator,
-          until deciding to take a break and complete a degree in Media and Communication.
-          Her passion for cultures and languages brought her to Portugal at the end of 2018.
-          In a couple of words: cat lover and sunset chaser.
-          <br>
-          <br>
-          <a href="https://www.linkedin.com/in/sharonmoriel/">Get in touch</a>
-
-        </p>
-      </div>
-    </div>
+  <div class="wrapper manifest">
+    <span>so·ro·ri·da·de</span> is a Portuguese word that means union and alliance between women based on empathy and sisterhood.
+    <br>
+    <br>
+    At Sororidade, we believe that role models can have a major impact on shaping our career choices. Which is why we decided to dedicate our project to interviewing and sharing the stories of women working in the tech industry.
+    <br>
+    <br>
+    It is our mission to raise awareness of the issues faced by women in tech, recognize the ones already making an impact, and inspire others to join.
+    <br>
+    <br>
+    Inspiration comes in many ways. For us, we find it in people, sometimes it is a friend we grew up with, others the founder of a startup we read about in an article. Their stories have inspired and empowered us to create our own path in the tech world. We believe that the stories we will share can help other women do the same.
+    <br>
+    <br>
+    We are excited to invite you to listen, participate and help build a stronger community.
 
   </div>
-</div>
+
+  <div id="aboutUs" class="wrapper about-us">
+    <h2>About Us</h2>
+    <div class="row">
+      <div class="col-sm-5">
+        <div class="profile">
+          <%= image_tag("luana.jpg", alt: "Luana Almeida", :class => "photo-1") %>
+          <p>
+            Luana initiated her career with a degree in Tourism and she has
+            many years with sales experience. In IT she started as Technical
+            Customer Support and a passion bring her to Portugal 5 years ago.
+            Now, she is challenging herself working as an OutSystems Developer.
+            In a couple of words: soccer fan and travel lover.
+            <br>
+            <br>
+            <a href="https://www.linkedin.com/in/luana-almeida/">Get in touch</a>
+          </p>
+        </div>
+
+      </div>
+
+      <div class="col-sm-5 offset-sm-2">
+        <div class="profile">
+          <%= image_tag("sharon.jpg", alt: "Sharon Moriel", :class => "photo-1") %>
+          <p>
+            Sharon started her journey in the tech world a few years back as a system administrator,
+            until deciding to take a break and complete a degree in Media and Communication.
+            Her passion for cultures and languages brought her to Portugal at the end of 2018.
+            In a couple of words: cat lover and sunset chaser.
+            <br>
+            <br>
+            <a href="https://www.linkedin.com/in/sharonmoriel/">Get in touch</a>
+
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+ <div class="scrolllUp">
+   <a href="/#"><i class="fas fa-arrow-circle-up"></i></a>
+ </div>
+
+
+
 
 
