--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,9 +2,9 @@
 <div class="footer">
   <div class="wrapper">
     <div class="row">
-     <div class="col-sm-12 col-md-8">
+     <div class="col-sm-12 col-md-7">
       <div class="footer-follow">
-        <p>Follow us and be notified about the next live.</p>
+        <p>Follow us to know about our next live.</p>
 
         <div class="footer-links">
           <a href="www.instagram/sororidade"><i class="fab fa-instagram"></i></a>
@@ -14,9 +14,9 @@
       </div>
     </div>
 
-    <div class="col-sm-12 col-md-4">
+    <div class="col-sm-12 col-md-5">
       <div class="footer-copyright">
-        <p>Copyright 2020 - Sororidade. All rights Reserved.</p>
+        <p>Copyright 2020 - Sororidade. All rights reserved.</p>
       </div>
     </div>
 </div>
