--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
 
   <div class="container">
 
-    <a class="navbar-brand" href="#">Sororidade <br><span> Inspire to Empower</span></a>
+    <a class="navbar-brand" href="#">SORORIDADE <br><span> Inspire to Empower</span></a>
 
     <button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#bs-navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
       <!-- <span class="navbar-toggler-icon custom-toggler"></span> -->
@@ -16,7 +16,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link">About Us</a>
+          <a class="nav-link" href="/#aboutUs">About Us</a>
         </li>
       </ul>
       <ul class="navbar-social">
