created new landing controller and changes to the landing page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,11 @@
 
 <body>
 
-  <%= render 'shared/navbar'%>
+    <%= render 'shared/navbar'%>
 
-  <%= render 'shared/banner'%>
+    <% unless controller_name == "landing" %>
+      <%= render 'shared/banner'%>
+    <% end %>
 
   <%= yield %>
 
