--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,10 +1,9 @@
 
 .navbar {
- background: #1f1f1f;
+ background: white;
 
  .navbar-brand {
-  color: #B2677D;
-  font-family: 'PT Sans';
+  color: #C54F71;
   letter-spacing: 5px;
   display: grid;
   font-size: 24px;
