--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,10 +1,10 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet');
 
 // Define fonts for body and headers
-$body-font: 'Montserrat', sans-serif;
+// $body-font: 'Montserrat', sans-serif;
 // $headers-font: 'Montserrat', sans-serif;
-// $body-font: 'PT Sans', sans-serif;
+$body-font: 'PT Sans', sans-serif;
 $headers-font: 'PT Sans', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
