--- a/app/views/landing/landingpage.html.erb
+++ b/app/views/landing/landingpage.html.erb
@@ -1,28 +1,143 @@
 
-<h1>Get to know the women behind Lisbon's tech scene.</h1>
-<p> Sign up and we will let you know when the stories are online.</p>
-<button>Subscribe</button>
+<div class="container">
+  <div class="main-content">
+    <div class="row">
+      <div class="col-sm-6">
+        <h1>Get to know the women behind Lisbon's tech scene.</h1>
+      </div>
 
-<h3>Inspire</h3>
-<p>women to pursue a career in tech</p>
-<h3>Educate </h3>
-<p>about the Lisbon tech scene </p>
-<h3>Connect</h3>
-<p>like minded women</p>
 
-<h3>What is sororidade?</h3>
-<p>Sororidade tells the stories of women working in the tech industry in Lisbon.
-We want to inspire and empower other women to consider a career in tech, and help
-build a stronger community. </p>
+      <div class="col-sm-6">
+        <%= image_tag("sororidade-ilust.png", alt: "Women working on computer", :class => "sororidade-ilust") %>
+      </div>
+    </div>
+  </div>
+<!--   <div class="row">
+    <div class="newsletter">
+      <form>
+        <div class="signup">
+          <p> Sign up and we will let you know when the stories are online.</p>
+        </div>
+        <input type="text" value="Enter your email">
+        <input type="submit" value ="Subscribe">
+      </form>
 
-<h3>How are we telling women’s stories?</h3>
-<p>We ask women to talk about their experiences working in tech.
-We believe that storytelling is an important and effective tool to explore deeper
-issues that shape the tech scene for women. </p>
+    </div>
+  </div> -->
+</div>
 
-<h3>Who are we?</h3>
-<p>Luana and Sharon. We are two women woking in tech in Lisbon
-who believe in the power of role models in shaping career choices.</p>
 
-<h3>How can you take part?</h3>
-<p>Would you like to share your story? Or do you know another woman who is interested? Please contact us.</p>
+<div class="actions-container">
+  <div class="row">
+
+    <div class="col-sm-4">
+      <div class="action">
+
+        <%= image_tag("inspire-icon.svg", alt: "Created by Ralf Schmitzer", :class => "icons") %>
+        <div class="action-title">
+          <h3> Get Inspire</h3>
+        </div>
+        <p>women to pursue a career in tech</p>
+
+      </div>
+    </div>
+
+    <div class="col-sm-4">
+     <%= image_tag("learn-icon.svg", alt: "Created by MRFA", :class => "icons") %>
+     <div class="action-title">
+       <h3>Learn</h3>
+     </div>
+     <p>about the Lisbon tech scene </p>
+   </div>
+
+
+   <div class="col-sm-4">
+     <%= image_tag("connect-icon.svg", alt: "Created by Mohamed Mbarki", :class => "icons") %>
+     <div class="action-title">
+       <h3>Connect</h3>
+     </div>
+     <p>like minded women</p>
+   </div>
+ </div>
+</div>
+</div>
+</div>
+
+
+
+<div class="container">
+  <div class="faq">
+
+    <div class="row">
+
+      <div class="col-sm-6">
+
+        <h3>What is sororidade?</h3>
+      </div>
+
+
+
+      <div class="col-sm-6">
+        <div class="column2">
+          <p>Sororidade tells the stories of women working in the tech industry in Lisbon.
+            We want to inspire and empower other women to consider a career in tech, and help
+          build a stronger community. </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <h3>How are we telling <span class="samerow">women’s stories?</span></h3>
+      </div>
+
+
+      <div class="col-sm-6">
+        <div class="column2">
+          <p>We ask women to talk about their experiences working in tech.
+            We believe that storytelling is an important and effective tool to explore deeper
+          issues that shape the tech scene for women. </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6">
+
+        <h3>Who are we?</h3>
+      </div>
+      <div class="col-sm-6">
+        <div class="column2">
+          <p>Luana and Sharon. We are two women working in tech in Lisbon
+          who believe in the power of role models in shaping career choices.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <h3>How can you take part?</h3>
+      </div>
+
+
+      <div class="col-sm-6">
+        <div class="column2">
+          <p>Would you like to share your story? Or do you know another woman who is interested? Please contact us.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+    <div class="row">
+    <div class="newsletter">
+      <form>
+        <div class="signup">
+          <p> Sign up and we will let you know when the stories are online.</p>
+        </div>
+        <input type="text" value="Enter your email">
+        <input type="submit" value ="Subscribe">
+      </form>
+
+    </div>
+  </div>
+</div>
+
