--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-expand-md py-2 fixed-top">
+<nav class="navbar navbar-expand-md py-2">
 
   <div class="container">
 
 
     <a class="navbar-brand" href="#">SORORIDADE <br><span> Inspire to Empower</span></a>
-    
+
     <% unless controller_name == "landing" %>
       <button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#bs-navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
         <!-- <span class="navbar-toggler-icon custom-toggler"></span> -->
