--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,7 +1,8 @@
 
 .footer {
-  background-color: #1f1f1f;
+  background-color: #C54F71;
   padding: 20px;
+  margin-top: 45px;
 
   p {
     margin-top: 1rem;
@@ -10,7 +11,7 @@
   .footer-follow {
     display:flex;
     color:white;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 300;
 
     .footer-links {
@@ -35,7 +36,7 @@
   .footer-copyright {
     color: white;
     text-align: right;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 300;
 }
 }
