--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -129,13 +129,14 @@
   </div>
     <div class="row">
     <div class="newsletter">
-      <form>
+      <%= render 'shared/subscriber_form'%>
+      <!-- <form>
         <div class="signup">
           <p> Sign up and we will let you know when the stories are online.</p>
         </div>
         <input type="text" value="Enter your email">
         <input type="submit" value ="Subscribe">
-      </form>
+      </form> -->
 
     </div>
   </div>
