added script for mailchimp integration

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <h1>Imposter Syndrome</h1>
     <h2>Participants:</h2>
-    <h2> Inês Gaspar and Zoe Goldschimidt</h2>
+    <!-- <h2> Inês Gaspar and Zoe Goldschimidt</h2> -->
   </div>
 </div>
 
