--- a/app/assets/stylesheets/pages/_landingpage.scss
+++ b/app/assets/stylesheets/pages/_landingpage.scss
@@ -41,6 +41,12 @@ h3 {
 }
 }
 
+#mc_embed_signup {
+  background:#fff;
+  clear:left;
+  width:100%;
+}
+
 .newsletter {
   text-align: center;
   margin: 0 auto;
