--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -138,13 +138,13 @@
            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
       </style>
       <div id="mc_embed_signup">
-      <form action="https://tech.us10.list-manage.com/subscribe/post?u=ddb5002cc494a8cc5cdbca175&amp;id=f31a3a6a0a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <form action="some" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
-        <label for="mce-EMAIL">Subscribe</label>
-        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+        <label for="EMAIL">Subscribe</label>
+        <input type="email" value="" name="EMAIL" class="email" id="EMAIL" placeholder="email address" required>
           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ddb5002cc494a8cc5cdbca175_f31a3a6a0a" tabindex="-1" value=""></div>
-          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="subscribe" class="button"></div>
           </div>
       </form>
       </div>
