added instagram link

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,7 +7,7 @@
         <p>Follow us to know about our next live.</p>
 
         <div class="footer-links">
-          <a href="www.instagram/sororidade"><i class="fab fa-instagram"></i></a>
+          <a href="http://www.instagram.com/sororidade.tech"><i class="fab fa-instagram"></i></a>
           <a href="www.youtube/sororidade"><i class="fab fa-youtube"></i></a>
           <a href="www.linkedin/sororidade"><i class="fab fa-linkedin"></i></a>
         </div>
